game algorith process

--- a/_dev/html/index.html
+++ b/_dev/html/index.html
@@ -36,7 +36,7 @@
 			<div class="overlay-block">
                 <div class="ov-wrap learn">
                     <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg1.jpg);"></div>
+                        <div class="bg-img"></div>
                         <div class="ov-cont">
                             <div class="h-b-h">Добро пожаловать!</div>
                             <div class="h-b-text">
@@ -53,80 +53,33 @@
                         </div>
                     </div>
                     <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg2.jpg);"></div>
-                        <img src="images/learn/study-arrow.svg" alt="" class="arr"/>
-                        <div class="ov-cont">
-                            <div class="h-b-h">Основное управление</div>
-                            <div class="h-b-text">
-                                Все основные элементы управления соответствуют стандартному плееру, привычному многим,<br/>
-                                но есть некоторые отличия. Например, из-за зависимостей повествования от ваших выборов<br/>
-                                недоступна перемотка по временной шкале. Управление перемоткой осуществляется кнопками.
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg3.jpg);"></div>
-                        <div class="ov-cont full">
-                            <div class="h-b-h"></div>
-                            <div class="h-b-text">
-                                <div class="pop-l">
-                                    По мере просмотра вы сможете перемещаться<br/>между ключевыми моментами повествования.
-                                </div>
-                                <div class="pop-r">
-                                    Здесь вам доступно дополнительное меню<br/>с многими полезными функциями.
-                                </div>
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg4.jpg);"></div>
-                        <div class="ov-cont ach">
-                            <div class="h-b-h">Достижения</div>
-                            <div class="h-b-text">
-                                В зависимости от того, как вы справитесь с прохождением интерактивных элементов, вы сможете получить достижения разной степени завершенности.
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
                         <div class="bg-img" style="background-image: url(images/learn/study-bg1.jpg);"></div>
+                        <div class="ov-cont">
+                            <div class="l-text">Внутри наш взгляд на игру, в которую играли твои предки, а может быть, даже ты. Смотри, чтобы олдскулы не свело и не забудь найти пасхалку.</div>
+                            <div class="l-text">Внутри ты найдешь полезную эко-инфу, сможешь почитать про героев сериала, сохранить-загрузиться и поразглядывать свои ачивки.</div>
+                            <div class="the-btn"><span>Дальше &rarr;</span></div>
+                        </div>
+                    </div>
+                    <div class="ov-inner">
+                        <div class="bg-img" style="background-image: url(images/learn/study-bg2.jpg);"></div>
+                        <div class="ov-cont">
+                            <div class="h-b-h">Изучай</div>
+                            <div class="l1-text">Получай достижения смотря сериал, несколько самых секретных можно найти только у партнёров проекта.</div>
+                            <div class="l1-text">Открывай полезные знания вместе с героями сериала. <br/><br/></div>
+                            <div class="the-btn"><span>Дальше &rarr;</span></div>
+                        </div>
+                    </div>
+                    <div class="ov-inner">
+                        <div class="bg-img"></div>
                         <div class="ov-cont save">
-                            <img src="images/learn/study-save.png" alt="" class="save-img"/>
-                            <div class="h-b-h">Сохранение</div>
-                            <div class="h-b-text">
-                                При просмотре с одного и одного же устройства данные сохраняются в вашем браузере,<br/>
-                                но при переходе на другое устройство вы также можете продолжить ваш прогресс прохождения,<br/>
+                            <div class="h-b-h">Твой прогресс</div>
+                            <img src="images/learn/save.png" alt="" class="save-img"/>
+                            <div class="h-b-text last">
+                                При просмотре с одного и одного же устройства данные сохраняются в вашем браузере,
+                                но при переходе на другое устройство вы также можете продолжить ваш прогресс прохождения,
                                 используя личный код или qr-код.
                             </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg1.jpg);"></div>
-                        <div class="ov-cont">
-                            <div class="h-b-h">Приятного просмотра!</div>
-                            <div class="h-b-text">
-                                Теперь, когда основные функции плеера понятны, мы рекомендуем вам самим иногда заходить в меню.<br/>
-                                Там вы найдете статьи о поисках, библиотеку персонажей и пополняемый список достижений, отражающий ваш прогресс.
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
+                            <div class="the-btn"><span>Поехали &rarr;</span></div>
                         </div>
                     </div>
                 </div>
