--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="overlay-block">
                 <div class="ov-wrap learn">
                     <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg1.jpg);"></div>
+                        <div class="bg-img"></div>
                         <div class="ov-cont">
                             <div class="h-b-h">Добро пожаловать!</div>
                             <div class="h-b-text">
@@ -74,117 +74,38 @@
                         </div>
                     </div>
                     <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg2.jpg);"></div>
-                        <img src="images/learn/study-arrow.svg" alt="" class="arr"/>
-                        <div class="ov-cont">
-                            <div class="h-b-h">Основное управление</div>
-                            <div class="h-b-text">
-                                Все основные элементы управления соответствуют стандартному плееру, привычному многим,<br/>
-                                но есть некоторые отличия. Например, из-за зависимостей повествования от ваших выборов<br/>
-                                недоступна перемотка по временной шкале. Управление перемоткой осуществляется кнопками.
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg3.jpg);"></div>
-                        <div class="ov-cont full">
-                            <div class="h-b-h"></div>
-                            <div class="h-b-text">
-                                <div class="pop-l">
-                                    По мере просмотра вы сможете перемещаться<br/>между ключевыми моментами повествования.
-                                </div>
-                                <div class="pop-r">
-                                    Здесь вам доступно дополнительное меню<br/>с многими полезными функциями.
-                                </div>
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg4.jpg);"></div>
-                        <div class="ov-cont ach">
-                            <div class="h-b-h">Достижения</div>
-                            <div class="h-b-text">
-                                В зависимости от того, как вы справитесь с прохождением интерактивных элементов, вы сможете получить достижения разной степени завершенности.
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
                         <div class="bg-img" style="background-image: url(images/learn/study-bg1.jpg);"></div>
+                        <div class="ov-cont">
+                            <div class="l-text">Внутри наш взгляд на игру, в которую играли твои предки, а может быть, даже ты. Смотри, чтобы олдскулы не свело и не забудь найти пасхалку.</div>
+                            <div class="l-text">Внутри ты найдешь полезную эко-инфу, сможешь почитать про героев сериала, сохранить-загрузиться и поразглядывать свои ачивки.</div>
+                            <div class="the-btn"><span>Дальше &rarr;</span></div>
+                        </div>
+                    </div>
+                    <div class="ov-inner">
+                        <div class="bg-img" style="background-image: url(images/learn/study-bg2.jpg);"></div>
+                        <div class="ov-cont">
+                            <div class="h-b-h">Изучай</div>
+                            <div class="l1-text">Получай достижения смотря сериал, несколько самых секретных можно найти только у партнёров проекта.</div>
+                            <div class="l1-text">Открывай полезные знания вместе с героями сериала. <br/><br/></div>
+                            <div class="the-btn"><span>Дальше &rarr;</span></div>
+                        </div>
+                    </div>
+                    <div class="ov-inner">
+                        <div class="bg-img"></div>
                         <div class="ov-cont save">
-                            <img src="images/learn/study-save.png" alt="" class="save-img"/>
-                            <div class="h-b-h">Сохранение</div>
-                            <div class="h-b-text">
-                                При просмотре с одного и одного же устройства данные сохраняются в вашем браузере,<br/>
-                                но при переходе на другое устройство вы также можете продолжить ваш прогресс прохождения,<br/>
+                            <div class="h-b-h">Твой прогресс</div>
+                            <img src="images/learn/save.png" alt="" class="save-img"/>
+                            <div class="h-b-text last">
+                                При просмотре с одного и одного же устройства данные сохраняются в вашем браузере,
+                                но при переходе на другое устройство вы также можете продолжить ваш прогресс прохождения,
                                 используя личный код или qr-код.
                             </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ov-inner">
-                        <div class="bg-img" style="background-image: url(images/learn/study-bg1.jpg);"></div>
-                        <div class="ov-cont">
-                            <div class="h-b-h">Приятного просмотра!</div>
-                            <div class="h-b-text">
-                                Теперь, когда основные функции плеера понятны, мы рекомендуем вам самим иногда заходить в меню.<br/>
-                                Там вы найдете статьи о поисках, библиотеку персонажей и пополняемый список достижений, отражающий ваш прогресс.
-                            </div>
-                            <div class="h-b-btn">
-                                <span>Далее</span>
-                                <div class="h-b-l"></div>
-                            </div>
+                            <div class="the-btn"><span>Поехали &rarr;</span></div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="start-pop">
-    <!--<div class="text">
-        Какой-то текст, если нужен
-    </div>-->
-    <div class="start play">
-        <div>
-            <img src="images/startscreen-btn-h.png" alt=""/>
-            <img src="images/startscreen-btn.png" alt=""/>
-        </div>
-        <div>
-            <img src="images/startscreen-cont-btn-h.png" alt=""/>
-            <img src="images/startscreen-cont-btn.png" alt=""/>
-        </div>
-    </div>
-    <div class="start load">
-        <img src="images/startscreen-load-btn.png" alt=""/>
-        <img src="images/startscreen-load-btn-h.png" alt=""/>
-    </div>
-</div>
-<!--<div class="s-ctrls">
-    <div class="continue">
-        <img src="images/startscreen-btn-continue.svg" alt=""/>
-        <img src="images/startscreen-btn-continue-h.svg" alt=""/>
-    </div>
-    <div class="clr hoverable">
-        <img src="images/startscreen-btn-restart.svg" alt=""/>
-        <img src="images/startscreen-btn-restart-h.svg" alt=""/>
-    </div>
-</div>-->
-<div class="loader-pop">
-    <div class="l"></div>
-</div>
-<div class="special-btns"><div class="inner"></div></div>
+            <div class="special-btns"><div class="inner"></div></div>
 <div class="info-pop">
     <div class="caller"></div>
     <div class="inner">
@@ -232,7 +153,7 @@
                             <div class="the-code">
                                 <div class="code"><span></span></div>
                                 <input type="text" class="code-hidden"/>
-                                <div class="btn copy">скопировать код<br/>в буфер обмена</div>
+                                <div class="the-btn copy">скопировать код<br/>в буфер обмена</div>
                             </div>
                             <div class="or-copy">
                                 Или вы можете схоранить себе qr-код и воспользоваться сканером на устройстве.
@@ -243,7 +164,7 @@
                         <div class="block">
                             <div class="the-code">
                                 <input placeholder="Введите ваш код" type="text" class="code-input"/>
-                                <div class="btn go">Загрузить</div>
+                                <div class="the-btn go">Загрузить</div>
 <!--                                <div class="err-text"></div>-->
                             </div>
                         </div>
@@ -291,7 +212,7 @@
     </div>
 </div>
 <div class="game-pop">
-    <div class="caller"></div>
+    <div class="caller"><span></span></div>
     <div class="inner">
         <div class="block">
             <div class="choose">
@@ -300,6 +221,7 @@
             <div class="choose">
                 <div>Ольга</div>
             </div>
+            <div class="secret"></div>
             <img src="images/game/g-select-l.svg" alt="" class="ch-hover"/>
             <img src="images/game/g-select-r.svg" alt="" class="ch-hover"/>
             <div class="ch-text"><span>Выбери персонажа</span></div>
@@ -317,6 +239,7 @@
         <div class="block">
             <img class="g-bg" src="images/game/base.jpg" alt=""/>
             <img class="g-bg" src="images/game/man.png" alt=""/>
+            <img class="g-bg" src="images/game/base.jpg" alt=""/>
             <img class="g-bg" src="images/game/secret.png" alt=""/>
             <div class="g-close"></div>
             <img class="g-btn" src="images/game/btn-off.png" alt=""/>
@@ -376,9 +299,35 @@
                     <div class="s-d-inner"></div>
                 </div>
             </div>
-            <div class="btn">Сыграть еще раз</div>
+            <div class="the-btn">Сыграть еще раз</div>
         </div>
     </div>
+</div>
+<div class="start-pop">
+    <div class="logo"></div>
+    <div class="wrap">
+        <div class="start play">
+            <div>
+                <img src="images/startscreen-btn.svg" alt=""/>
+                <img src="images/startscreen-btn-h.svg" alt=""/>
+                <span>Начать</span>
+            </div>
+            <div>
+                <img src="images/startscreen-btn.svg" alt=""/>
+                <img src="images/startscreen-btn-h.svg" alt=""/>
+                <span>Продолжить</span>
+            </div>
+        </div>
+        <div class="start load">
+            <img src="images/startscreen-btn.svg" alt=""/>
+            <img src="images/startscreen-btn-h.svg" alt=""/>
+            <span>Загрузить</span>
+        </div>
+    </div>
+    <div class="pane"></div>
+</div>
+<div class="loader-pop">
+    <div class="l"></div>
 </div>
 <div class="achievement-pop">
     <div class="into"></div>
@@ -415,7 +364,7 @@
 </script>
 <script type="text/template" id="info-art-template">
     <% for(let i=0;i<articles.length;i++){ %>
-    <div class="article-item">
+    <div class="article-item<%= articles[i].disabled?' disabled':'' %>">
         <img src="<%= articles[i].bg %>" alt="" class="a-bg"/>
         <div class="a-cont">
             <div class="a-h"><span><%= articles[i].h %></span></div>
