--- a/index5.html
+++ b/index5.html
@@ -1,4 +1,64 @@
-<div class="special-btns"><div class="inner"></div></div>
+<!DOCTYPE html>
+<html data-app='{"modules":["index"],"index":5}'>
+    <head>
+		<meta charset="utf-8" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<title></title>
+<meta name="Keywords" content="" />
+<meta name="Description" content="" />
+<meta name="format-detection" content="telephone=no">
+<meta name="viewport" content="maximum-scale=1.0,user-scalable=0">
+<!--<link rel="stylesheet" href="css/style.min.css" />-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
+<script>window.jQuery||document.write('<script src="js/lib/jquery.js">\x3C/script>')</script>
+        <link href="css/video-js.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css" />
+<!--<link rel="stylesheet" href="css/style.min.css">-->
+<script src="js/lib/pack/0underscore.min.js"></script>
+<script src="js/lib/pack/backbone.min.js"></script>
+<script src="js/lib/pack/event.js"></script>
+<script src="js/lib/pack/imagesloaded.js"></script>
+<script src="js/lib/pack/lottie.min.js"></script>
+<script src="js/lib/pack/video.min.js"></script>
+<script src="js/lib/pack/videojs-quality-selector.min.js"></script>
+<script src="js/lib/pack/jquery.qrcode.min.js"></script>
+<script src="js/app.js" type="module"></script>
+<!--<script src="js/built-min.js"></script>-->
+<!--<script src="js/built.min.js"></script>-->
+	</head>
+	<body>
+    <!-- Yandex.Metrika counter -->
+    <!--<script type="text/javascript" >
+     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+     ym(68233750, "init", {
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true
+     });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/68233750" style="position:absolute; left:-9999px;" alt="" /></div></noscript>-->
+    <!-- /Yandex.Metrika counter -->
+		<div id="wrap">
+			<div class="player-wrap">
+                <video playsinline
+                       class="video-js"
+                       controls>
+                    <p class="vjs-no-js">
+                        To view this video please enable JavaScript, and consider upgrading to a
+                        web browser that
+                        <a href="https://videojs.com/html5-video-support/" target="_blank">
+                            supports HTML5 video
+                        </a>
+                    </p>
+                </video>
+            </div>
+			<div class="overlay-block">
+            
+            </div>
+            <div class="special-btns"><div class="inner"></div></div>
 <div class="info-pop">
     <div class="caller"></div>
     <div class="inner">
@@ -279,3 +339,60 @@
 </div>
 
 <div class="server-test"></div>
+		</div>
+
+    <script type="text/template" id="info-ach-template">
+    <% for(let i=0;i<achievements.length;i++){ %>
+    <div class="ach-item<%= achievements[i].disabled?' disabled':'' %>">
+        <img class="ach-img" src="<%= achievements[i].img %>" />
+        <div class="ach-text">
+            <div class="ach-h"><%= achievements[i].h %></div>
+            <%= achievements[i].text %>
+        </div>
+    </div>
+    <% } %>
+</script>
+<script type="text/template" id="achievement-template">
+    <img class="img" src="<%= img %>" />
+    <div class="inner">
+        <div class="h"><%= h %></div>
+        <div class="text"><%= text %></div>
+    </div>
+</script>
+<script type="text/template" id="info-art-template">
+    <% for(let i=0;i<articles.length;i++){ %>
+    <div class="article-item<%= articles[i].disabled?' disabled':'' %>">
+        <img src="<%= articles[i].bg %>" alt="" class="a-bg"/>
+        <div class="a-cont">
+            <div class="a-h"><span><%= articles[i].h %></span></div>
+            <div class="a-text"><%= articles[i].text %></div>
+        </div>
+        <img src="<%= articles[i].icon %>" alt="" class="a-icon"/>
+    </div>
+    <% } %>
+</script>
+<script type="text/template" id="article-template">
+    <div class="article-item">
+        <img src="<%= bg %>" alt="" class="a-bg"/>
+        <div class="a-cont">
+            <div class="a-h"><span><%= h %></span></div>
+            <div class="a-text"><%= text %></div>
+        </div>
+        <img src="<%= icon %>" alt="" class="a-icon"/>
+    </div>
+</script>
+<script type="text/template" id="full-article-template">
+    <div class="h"><span><%= h %></span></div>
+    <%= pop %>
+</script>
+<script type="text/template" id="ext-player-template">
+    <input type="checkbox" />
+    <img class="icon" src="images/icons/icon-bookmark.svg" alt=""/>
+    <div class="step-btns">
+        <% for(let i=0;i<choose.length;i++){ %>
+        <div class="int-ind-back<%= choose[i]?' enabled':' ' %>"><span><%= i+1 %></span></div>
+        <% } %>
+    </div>
+</script>
+	</body>
+</html>
