disable orientation check if in iframe

--- a/_dev/html/index.html
+++ b/_dev/html/index.html
@@ -3,6 +3,17 @@
     <head>
 		@@include('components/head.html')
         @@include('components/scripts.html')
+        <style>
+          .off-btn{
+            position:absolute;
+            top:0;
+            right:3rem;
+            width:8rem;
+          }
+          .off-btn img{
+            width:100%;
+          }
+        </style>
 	</head>
 	<body>
     <!-- Yandex.Metrika counter -->
@@ -32,6 +43,7 @@
                         </a>
                     </p>
                 </video>
+                <a href="" class="off-btn"><img src="images/off.svg" alt=""/></a>
             </div>
 			<div class="overlay-block">
                 <div class="ov-wrap learn">
