--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
 <script src="js/app.js" type="module"></script>
 <!--<script src="js/built-min.js"></script>-->
 <!--<script src="js/built.min.js"></script>-->
+        <style>
+            .off-btn{
+              position:absolute;
+              top:0;
+              right:3rem;
+              width:8rem;
+            }
+            .off-btn img{
+              width:100%;
+            }
+        </style>
 	</head>
 	<body>
     <!-- Yandex.Metrika counter -->
@@ -54,6 +65,7 @@
                         </a>
                     </p>
                 </video>
+                <a href="" class="off-btn"><img src="images/off.svg" alt=""/></a>
             </div>
 			<div class="overlay-block">
                 <div class="ov-wrap learn">
